k8s/overlays/nuc-prod/node-red/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-nodered
spec:
  stripPrefix:
    prefixes:
      - /nodered
