k8s/overlays/nuc-prod/node-red/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: home-ops-strip-nodered@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: glumserver.localdomain
      http:
        paths:
          - path: /nodered
            pathType: Prefix
            backend:
              service:
                name: node-red
                port:
                  name: http
